# simplehttp

./: .gitignore  CMakeLists.txt  makeAll.sh
include/: domain.h  html.h  json.h  response.h  response_fabric.h
lib/: CMakeLists.txt
lib/include/: client.h  configuration.h  entity.h  html.h  http.h  json.h  logger.h  response.h  response_fabric.h  server.h  task.h  utils.h
lib/src/: client.cpp  configuration.cpp  entity.cpp  http.cpp  response.cpp  response_fabric.cpp  server.cpp  task.cpp  utils.cpp
src/: client.cpp  coder.cpp  coder.h  devices.cpp  domain.h  error404.cpp  http_logger.cpp  imdb.cpp  imdb.h  json.cpp  logger.cpp  main.cpp  response.cpp  server.cpp  session.cpp  session.h  version.cpp
src/domain/: devices.cpp  version.cpp
src/responses/: response_fabric.cpp
test/: CMakeLists.txt  testJSON.cpp
